--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="row align-items-center no-gutters mb-2 mb-lg-0">
           <div class="col-xl-6 col-lg-6">
             <a href="others/Anita_Mihajlova_Resume.pdf">
-              <img class="img-fluid mb-2 mb-lg-2" src="img/me.jpeg" style="width:25vw border-radius=50%" alt="">
+              <img class="img-fluid mb-2 mb-lg-2" src="img/aml_mockup_cv.png" style="width:25vw border-radius=50%" alt="">
             </a>
           </div>
           <div class="col-xl-4 col-lg-4">
