--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="col-xl-8 col-lg-8">
-            <img class="img-fluid" src="img/my_logo.jpg" style="max-width: 100%;" alt="">
+            <img class="img-fluid" src="img/aml_photo.jpg" style="max-width: 100%;" alt="">
           </div>
         </div>
       </div>
