--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
     <!-- Header -->
     <header class="masthead">
-      <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Anita Mihajlova</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Architect</h2>
+      <div class="container d-flex h-100 align-items-right">
+        <div class="mx-auto text-right">
+          <!-- <h1 class="mx-auto my-0 text-uppercase">Anita Mihajlova</h1>-->
+          <!--<h2 class="text-white-50 mx-auto mt-2 mb-5">Architect</h2>-->
           <a href="#about" class="btn btn-primary js-scroll-trigger">Proceed to website</a>
         </div>
       </div>
@@ -71,8 +71,11 @@
         <div class="row align-items-center mb-2 mb-lg-0">
           <div class="col-xl-4 col-lg-4">
             <div class="featured-text text-center text-lg-right">
-              <h2 class="text-white">About Me</h2>
-              <p class="text-white-50 mb-0">Lorem ipsum</p>
+              <h2 class="text-white">About</h2>
+              <p class="text-white-50 mb-0">I believe that architecture is more than a plan, more than a drawing. 
+                I believe in its power to transmit knowledge, to evoke emotions, to bring back memories. 
+                It connects us to our past, to spirituality, to nature, to ourselves. 
+                It possesses the ability to shape our future.</p>
             </div>
           </div>
           <div class="col-xl-8 col-lg-8">
