--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Header -->
     <header class="masthead">
-      <div class="container d-flex h-100 align-items-right">
+      <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-right">
           <!-- <h1 class="mx-auto my-0 text-uppercase">Anita Mihajlova</h1>-->
           <!--<h2 class="text-white-50 mx-auto mt-2 mb-5">Architect</h2>-->
@@ -72,14 +72,14 @@
           <div class="col-xl-4 col-lg-4">
             <div class="featured-text text-center text-lg-right">
               <h2 class="text-white">About</h2>
-              <p class="text-white-50 mb-0">I believe that architecture is more than a plan, more than a drawing. 
-                I believe in its power to transmit knowledge, to evoke emotions, to bring back memories. 
-                It connects us to our past, to spirituality, to nature, to ourselves. 
+              <p class="text-white-50 mb-0">I believe that architecture is more than a plan, more than a drawing.<br /><br /> 
+                I believe in its power to transmit knowledge, to evoke emotions, to bring back memories.<br /><br />
+                It connects us to our past, to spirituality, to nature, to ourselves.<br /><br />
                 It possesses the ability to shape our future.</p>
             </div>
           </div>
           <div class="col-xl-8 col-lg-8">
-            <img class="img-fluid" src="img/aml_photo.jpg" style="max-width: 100%;" alt="">
+            <img class="img-fluid" src="img/aml_photo.jpg" style="max-width: 50%;" alt="">
           </div>
         </div>
       </div>
