--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/aml_mockup_cv_2.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/aml_cv_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">CV</div>
@@ -129,7 +129,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/gd_mockup_3.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/gd_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Graphic Design</div>
@@ -144,7 +144,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/pa_mockup_2.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/pa_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Academic Projects</div>
@@ -159,7 +159,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/mas_mockup_2.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/mas_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Master Thesis</div>
@@ -174,7 +174,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/wp_mockup_2.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/wp_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Professional Projects</div>
@@ -189,7 +189,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/3ds_mockup_4.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/mockups/3ds_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">3D Visualization</div>
@@ -209,7 +209,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/1-01.png" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/timeline/tl_1.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2010-2015</h4>
@@ -219,7 +219,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/2-01.png" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/timeline/tl_2.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2015-2017</h4>
@@ -229,7 +229,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/3-01.png" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/timeline/tl_3.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2018</h4>
@@ -239,7 +239,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/4-01.png" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/timeline/tl_4.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2019-2022</h4>
@@ -249,7 +249,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/5-01.png" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/timeline/tl_5.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2019-2021</h4>
@@ -277,63 +277,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                    </div>
-                    <div class="col-md-6">
-                        <div class="text-center">
-                            <h2 class="section-heading text-uppercase" style="color: #525a5d;">Contact Me</h2>
-                            <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
-                        </div>
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <div class="row align-items-stretch mb-5">
-                                <div class="form-group">
-                                    <!-- Name input-->
-                                    <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                                </div>
-                                <div class="form-group">
-                                    <!-- Email address input-->
-                                    <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                                    <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                    <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                                </div>
-                                <div class="form-group">
-                                    <!-- Phone number input-->
-                                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                                    <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                                </div>
-                                <div class="form-group form-group-textarea">
-                                    <!-- Message input-->
-                                    <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                                    <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                                </div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center text-white mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
-                        </form>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     </div>
                 </div>
             </div>
@@ -368,8 +313,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/aml_mockup_cv_2.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/aml_cv_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/CV_2022.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -403,8 +351,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/gd_mockup_3.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/gd_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/gd_portfolio.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -438,8 +389,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/pa_mockup_2.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/pa_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/pa_portfolio.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -473,8 +427,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/mas_mockup_2.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/mas_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/mas_portfolio.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -508,8 +465,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/wp_mockup_2.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/wp_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/wp_portfolio.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -543,8 +503,11 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/3ds_mockup_4.png" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/mockups/3ds_mockup.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <hr>
+                                    <iframe src="assets/portfolios/3ds_portfolio.pdf" style="width: 100%; height: 1000px;" frameborder="0"></iframe>
+                                    <hr>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
