Translate to french

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Anita Mihajlova Leroy's Website</title>
+        <title>Anita Mihajlova Leroy</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -28,9 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">CV + Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">À propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">CV + Projets</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#timeline">Chronologie</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -54,10 +54,10 @@
                 <div class="row text-center">
                     <div class="col-md-6">
                         <br />
-                        <p class="text-muted text-end">I believe that architecture is more than a plan, more than a drawing.</p>
-                        <p class="text-muted text-end">I believe in its power to transmit knowledge, to evoke emotions, to bring back memories.</p>
-                        <p class="text-muted text-end">It connects us to our past, to spirituality, to nature, to ourselves.</p>
-                        <p class="text-muted text-end">It possesses the ability to shape our future.</p>
+                        <p class="text-muted text-end">J'estime que l'architecture est plus qu'un plan, plus qu'un dessin.</p>
+                        <p class="text-muted text-end">J'ai confiance en son pouvoir de transmettre des connaissances, d'évoquer des émotions, de rappeler des souvenirs.</p>
+                        <p class="text-muted text-end">Elle nous relie à notre passé, à la spiritualité, à la nature, à nous-mêmes.</p>
+                        <p class="text-muted text-end">Elle possède la capacité de façonner notre avenir.</p>
                     </div>
                     <div class="col-md-6">
                         <img src="assets/img/aml_photo_round.png" style="max-width: 40%; margin-right: 50%;" alt="..." />
@@ -67,7 +67,7 @@
             <br><br><br>
             <div class="container">
                 <div class="text-center">
-                    <h3 class="section-heading text-uppercase">Experienced in</h2><br>
+                    <h3 class="section-heading text-uppercase">Expérience en</h2><br>
                     <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
                 </div>
                 <div class="row text-center">
@@ -77,23 +77,23 @@
                             <i class="fa-solid fa-house fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3 text-uppercase">Architecture</h4>
-                        <p class="text-muted">Concept development, technical presentation and execution.</p>
+                        <p class="text-muted">Développement de concepts, présentations techniques et exécution.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3 text-uppercase">Heritage Conservation</h4>
-                        <p class="text-muted">UNESCO-recognized Master of Advanced Studies in Museology and Conservation of Architectural Heritage.</p>
+                        <h4 class="my-3 text-uppercase">Conservation de patrimoine</h4>
+                        <p class="text-muted">Maîtrise d'études avancées en muséologie et conservation de patrimoine bâti reconnue par l'UNESCO.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary" style="color:blue"></i>
                             <i class="fas fa-palette fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3 text-uppercase">Graphic Design</h4>
-                        <p class="text-muted">Implementation of different design tools targeting branding, marketing and sales.</p>
+                        <h4 class="my-3 text-uppercase">Design graphique</h4>
+                        <p class="text-muted">Utilisation de différents outils de conception ciblant l'identité d'entreprise, le marketing et les ventes.</p>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">CV + Projects</h2>
+                    <h2 class="section-heading text-uppercase">CV + Projets</h2>
                     <br>
                     <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
                 </div>
@@ -132,7 +132,7 @@
                                 <img class="img-fluid" src="assets/img/mockups/gd_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Design graphique</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Graphic Design</div>-->
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                                 <img class="img-fluid" src="assets/img/mockups/pa_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Academic Projects</div>
+                                <div class="portfolio-caption-heading">Projets académiques</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Identity</div>-->
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                 <img class="img-fluid" src="assets/img/mockups/mas_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Master Thesis</div>
+                                <div class="portfolio-caption-heading">Thèse de Master</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Branding</div>-->
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                                 <img class="img-fluid" src="assets/img/mockups/wp_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Professional Projects</div>
+                                <div class="portfolio-caption-heading">Projets professionnels</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Website Design</div>-->
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                 <img class="img-fluid" src="assets/img/mockups/3ds_mockup.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">3D Visualization</div>
+                                <div class="portfolio-caption-heading">Visualisation 3D</div>
                                 <!--<div class="portfolio-caption-subheading text-muted">Photography</div>-->
                             </div>
                         </div>
@@ -204,8 +204,7 @@
         <section class="page-section" id="timeline">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Timeline</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Chronologie</h2>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -215,7 +214,7 @@
                                 <h4>2010-2015</h4>
                                 <!--<h4 class="subheading">Our Humble Beginnings</h4>-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Studied at the Faculty of Architecture of Cyril and Methodius University in Skopje, Macedonia and obtained a Master in Architecture.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Études à la faculté d'architecture de l'université Cyril et Methodius à Skopje, Macédoine, et obtention d'un Master en architecture.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -225,7 +224,7 @@
                                 <h4>2015-2017</h4>
                                 <!--<h4 class="subheading">An Agency is Born</h4>-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Worked as an Architect in the General Enterprise Zikol in Strumica, Macedonia.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Emploi en tant qu'architecte dans l'entreprise générale Zikol à Strumica, Macédoine.</p></div>
                         </div>
                     </li>
                     <li>
@@ -235,7 +234,7 @@
                                 <h4>2018</h4>
                                 <!--<h4 class="subheading">Transition to Full Service</h4>-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Moved to Lausanne, Switzerland.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Déménagement à Lausanne, Suisse.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -245,7 +244,7 @@
                                 <h4>2019-2022</h4>
                                 <!--<h4 class="subheading">Phase Two Expansion</h4>-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Worked at Protec Études et Réalisations sàrl in Echallens, Switzerland.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Emploi en tant que dessinatrice chez Protec Études et Réalisations sàrl à Echallens, Suisse.</p></div>
                         </div>
                     </li>
                     <li>
@@ -255,18 +254,7 @@
                                 <h4>2019-2021</h4>
                                 <!--<h4 class="subheading">Transition to Full Service</h4>-->
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Studied at the University of Geneva, Switzerland and obtained a Master of Advanced Studies in Museology and Architectural Heritage, recognized by many NGO, among which UNESCO.</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of My
-                                <br />
-                                Story!
-                            </h4>
+                            <div class="timeline-body"><p class="text-muted">Études à l'Université de Genève, Suisse et obtention d'une Maîtrise Universitaire d'études avancées en conservation du patrimoine et muséologie, reconnue par de nombreuses ONG, dont l'UNESCO.</p></div>
                         </div>
                     </li>
                 </ul>
