Revert git lfs in most files

--- a/index.html
+++ b/index.html
@@ -331,12 +331,9 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/aml_cv_mockup.png" alt="..." />
                                     </a>
                                     <p>Vous trouverez ci-joint mon CV.<br/>N'hésitez pas à le consulter et à me contacter pour tout complément d'information dont vous pourriez avoir besoin.</p>
-                                    <a href="assets/portfolios/CV_2022.pdf">
-                                        <button class="btn btn-primary btn-xl" type="button">
-                                            <i class="me-1"></i>
-                                            CV
-                                        </button>
-                                    </a><br/><br/><br/>
+                                    <br/>
+                                    <iframe src="assets/portfolios/CV_2022.pdf" style="width:100%;height:1200px;" frameborder="0"></iframe>
+                                    <br/><br/><br/>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
                                         Close Project
