replace GDrive doc

--- a/index.html
+++ b/index.html
@@ -652,11 +652,11 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Design graphique</h2>
-                                    <a href="https://drive.google.com/file/d/1RgR-WNI0nNfIe8S48ZQVUCLd7ksOpEQM/view">
+                                    <a href="assets/portfolios/gd_portfolio.pdf">
                                     <img class="img-fluid d-block mx-auto" src="assets/img/mockups/gd_mockup.png" alt="..." />
                                     </a>
                                     <p>Une collection de projets de conception graphique pour des clients privés, lorsque je travaillais activement en tant que graphiste indépendante.</p>
-                                    <a href="https://drive.google.com/file/d/1RgR-WNI0nNfIe8S48ZQVUCLd7ksOpEQM/view">
+                                    <a href="assets/portfolios/gd_portfolio.pdf">
                                         <button class="btn btn-primary btn-xl" type="button">
                                             <i class="me-1"></i>
                                             Portfolio
